# kvflow-sim

./: .gitignore  Cargo.toml  README.md
docs/: architecture.md  research_plan.md  roadmap.md
examples/: fetch_sensitivity.rs  fetch_vs_recompute.rs  kv_size.rs  serving_cache_policy.rs  serving_congestion.rs  serving_load_sweep.rs  serving_no_reuse.rs  trace_stats.rs
src/: decision.rs  error.rs  lib.rs
src/cache/: eviction.rs  mod.rs  object.rs  state.rs  tier.rs
src/cluster/: gpu.rs  mod.rs  node.rs  topology.rs
src/core/: event.rs  mod.rs  simulator.rs
src/model/: compute.rs  mod.rs  profile.rs
src/policy/: baselines.rs  cpu_offload_lru.rs  fetch.rs  local_gpu_lru.rs  mod.rs  network_aware.rs  placement.rs
src/serving/: cache_runner.rs  event.rs  inflight.rs  metrics.rs  mod.rs  runner.rs  scheduler.rs
src/trace/: jsonl.rs  mod.rs  request.rs  stats.rs  synthetic.rs
src/transfer/: analytical.rs  mod.rs  queued.rs  table.rs  units.rs
